2nd training/Community/Community/Community1/force-app/main/default/objects/FreightCalc_Products__c/FreightCalc_Products__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Freight Calculator Products, Type and Price</description>
    <label>FreightCalc Products</label>
</CustomObject>