2nd training/Community/Community/Community1/force-app/main/default/objects/FreightCalc_Products__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Active Flag, Wizard should not pull in these Products once they have been made Inactive</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>