2nd training/Community/Community/Community1/force-app/main/default/objects/FreightCalc_Products__c/fields/Dependent_Field__c.field-meta.xml
<CustomField>
    <fullName>Dependent_Field__c</fullName>
    <label>Dependent Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>