2nd training/Community/Community/Community1/force-app/main/default/objects/FreightCalc_Products__c/fields/Optional__c.field-meta.xml
<CustomField>
    <fullName>Optional__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Optional Flag, these Products appear separately.</description>
    <inlineHelpText>Optional Flag, these Products appear separately.</inlineHelpText>
    <label>Optional</label>
    <type>Checkbox</type>
</CustomField>