2nd training/Community/Community/Community1/force-app/main/default/objects/FreightCalc_Products__c/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <description>Price / Cost of the Product / Minimum Price at times Rate Calculation is required.</description>
    <inlineHelpText>Price of the Product.  ( Minimum Price at times when Rate has to be calculated and other cases, User can change)</inlineHelpText>
    <label>Price</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>