2nd training/Community/Community/Community1/force-app/main/default/objects/FreightCalc_Products__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <description>Freight Calculator Product Name</description>
    <inlineHelpText>Freight Calculator Product Name</inlineHelpText>
    <label>Product Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>