2nd training/Community/Community/Community1/force-app/main/default/objects/FreightCalc_Products__c/fields/Rate__c.field-meta.xml
<CustomField>
    <fullName>Rate__c</fullName>
    <description>Rate per Kg.</description>
    <inlineHelpText>Rate per Kg.</inlineHelpText>
    <label>Rate(per Kg)</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>